<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance" xmlns = "http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.orion</groupId>
    <artifactId>artificial-intelligence-agent-cli</artifactId>
    <version>0.0.1</version>
    <name>Orion Artificial Intelligence - Agent CLI</name>
    <packaging>jar</packaging>


    <properties>
        <maven.compiler.source>26</maven.compiler.source>
        <maven.compiler.target>26</maven.compiler.target>
        <java.version>26</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <jackson.version>3.1.4</jackson.version>
        <lombok.version>1.18.46</lombok.version>
        <spring.boot.version>4.1.0</spring.boot.version>
    </properties>


    <build>
        <finalName>agentcli</finalName>


        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <artifactId>lombok</artifactId>
                            <groupId>org.projectlombok</groupId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>


                    <compilerArgs>
                        <arg>-J--add-opens=java.base/java.time=ALL-UNNAMED</arg>
                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                    </compilerArgs>


                    <encoding>UTF-8</encoding>
                    <fork>true</fork>

                    <release>${maven.compiler.target}</release>
                </configuration>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.15.0</version>
            </plugin>


            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <systemPropertyVariables>
                        <java.locale.providers>COMPAT,CLDR,SPI,JRE</java.locale.providers>
                    </systemPropertyVariables>
                </configuration>
                <groupId>org.apache.maven.plugins</groupId>


                <version>3.5.6</version>
            </plugin>


            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>3.5.7</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>com.orion.ai.agent.cli.AgentCLIApplication</mainClass>
                    <jvmArguments>
                        --enable-native-access=ALL-UNNAMED
                    </jvmArguments>
                </configuration>
            </plugin>
        </plugins>


        <resources>
            <resource>
                <directory>src/main/resources</directory>


                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>


        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>


            <testResource>
                <directory>${project.basedir}/src/test/java</directory>
            </testResource>
        </testResources>
    </build>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.shell</groupId>
                <artifactId>spring-shell-dependencies</artifactId>
                <version>4.0.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>


            <dependency>
                <artifactId>junit-bom</artifactId>
                <groupId>org.junit</groupId>
                <scope>import</scope>
                <type>pom</type>
                <version>6.0.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <dependencies>
        <dependency>
            <groupId>com.orion</groupId>
            <artifactId>utils</artifactId>
            <version>0.0.1</version>
        </dependency>


        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <version>4.0.6</version>
        </dependency>


        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
            <version>3.5.14</version>
        </dependency>


        <dependency>
            <groupId>org.springframework.shell</groupId>
            <artifactId>spring-shell-starter</artifactId>
        </dependency>


        <dependency>
            <groupId>org.springframework.shell</groupId>
            <artifactId>spring-shell-jline</artifactId>
        </dependency>


        <dependency>
            <groupId>tools.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>


        <dependency>
            <groupId>tools.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>3.0.2</version>
        </dependency>


        <dependency>
            <groupId>com.openai</groupId>
            <artifactId>openai-java</artifactId>
            <version>4.41.0</version>
        </dependency>


        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>


        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
        </dependency>


        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>4.0.6</version>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite-engine</artifactId>
        </dependency>


        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.27.6</version>
        </dependency>
    </dependencies>
</project>